# kotoba

./: .gitignore  CHANGELOG.md  Cargo.toml  DESCRIPTION.md  PLAN.md  README.md  kotoba.toml  theme.toml.example
.github/workflows/: ci.yml
data/: sample.txt  sample_big.txt  sample_hard.txt  sample_huge.txt  system_prompt.txt
src/: app.rs  config.rs  main.rs
src/core/: dictionary.rs  llm.rs  mod.rs  srs.rs  tokenizer.rs
src/db/: connection.rs  mod.rs  models.rs  schema.rs  stats.rs
src/import/: background.rs  clipboard.rs  epub.rs  mod.rs  subtitle.rs  syosetsu.rs  syosetu.rs  text.rs  web.rs
src/ui/: events.rs  mod.rs  theme.rs
src/ui/components/: furigana.rs  mod.rs  popup.rs  sidebar.rs  status_bar.rs
src/ui/screens/: card_browser.rs  chapter_select.rs  home.rs  library.rs  mod.rs  placeholder.rs  reader.rs  review.rs  settings.rs  stats.rs  syosetsu.rs  syosetu.rs
